--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li><a href="mailto:raisramadhan60@icloud.com">CONTACT</a></li>
         </ul>
       </nav>
-      <button class="btn-cta" onclick="redirInstagram()">Follow Saya</button>
+      <button class="btn-cta" onclick="redirCv()">Download CV</button>
     </header>
     <div class="container">
       <div class="intro">
@@ -55,8 +55,8 @@
     </footer>
 
     <script>
-      function redirInstagram() {
-        window.location.href = "https://instagram.com/raisrmdhan";
+      function redirCv() {
+        window.location.href = "https://drive.google.com/file/d/1E3B21DTats20nyHj6l1wfVgQ-oNRu2uZ/view?usp=drive_link";
       }
 
       function redirWhatsapp() {
